--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ services:
   - docker
 before_install:
   - docker build -t sjegadison/docker-react -f Dockerfile.dev .
-script:
-  - docker run -e CI=true sjegadison/docker-react npm test
+# script:
+#   - docker run -e CI=true sjegadison/docker-react npm test
